--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </div>
         </div>
     </nav>
+
 </head>
 
 <body>
@@ -59,10 +60,8 @@
     </div>
 
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/MGvzMqHydfA" frameborder="0"
-            allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/GEpwfzUtQR4" frameborder="0" allowfullscreen></iframe>
     </div>
-
 
     <div class="contact-section">
         <h2>Contacto</h2>
@@ -89,6 +88,7 @@
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
+
 </body>
 
 </html>
